# parallel-project

./: CMakeLists.txt  FIXES_SUMMARY.md  IMPROVEMENTS.md
include/glad/: glad.h
src/: glad.c  main.cpp  main_research.cpp  readme.md
